auto-test/tests/chapter_17/invalid_parse/sizeof_cast.c


int main(void) {
    return sizeof(char) 1;
}